# abrupt-thaw-indicators

./: README.md  pyproject.toml  settings.py
archive/: keras-neural-network.py  shap-values.pickle
archive/data/: Database_final_v1.xlsx  ThawDatabase06222023.csv  clean-data.py  feature-points.csv  feature-table-expanded.csv  feature-table.csv  sample-data-at-points.py
archive/data/no-thermokarst-sites/: TaigaCordillera_Tundra_50random_500m.csv  Tundra_50random_500m.csv  alaska-outline.geojson
data/: build_feature_table.py  clean-data.py  clean_feature_table.py  compile-points.py  controls.csv  feature-table.csv  sample-data-at-points.py  synthetic-points.csv  verified-points.csv
data/no-thermokarst-sites/: BorealInterior_50random_500m_JS.csv  MarineWestCoastForest_BorealInterior_50random_500m.csv  NoThermokarst_HWebb_etal.kmz  merged.csv
models/: keras-neural-network.py  model.json  model_previous_best.json  shap_values.py  train_xgboost.py
output/: MURI-update-July2025.pptx  shap-values.pickle
