[tool.poetry]
name = "abrupt-thaw-indicators"
version = "0.1.0"
description = ""
authors = ["Ethan Pierce <ethan.pierce@colorado.edu>"]
license = "GNU GPL v3"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
geopandas = "^0.14.3"
earthengine-api = "^0.1.399"
matplotlib = "^3.8.4"
jax = "^0.4.26"
equinox = "^0.11.4"
optax = "^0.2.2"
jaxtyping = "^0.2.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
