[project]
name = "abrupt-thaw-indicators"
version = "0.1.0"
description = ""
license = "GPL-3.0-or-later"
authors = [
    {name = "Ethan",email = "ethan.g.pierce@dartmouth.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keras (>=3.10.0,<4.0.0)",
    "jax (>=0.6.2,<0.7.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "earthengine-api (>=1.5.21,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shap (>=0.48.0,<0.49.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.2,<1.7)",
    "imbalanced-learn (>=0.13.0,<0.14.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
